objects/AIContact__c.object
<CustomObject>
    <description>AI Contact People</description>
    <fields>
        <fullName>AI_Contact_Address__c</fullName>
        <label>AI Contact Address</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Contact_E_Mail__c</fullName>
        <description>Email</description>
        <label>AI Contact E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AI_Contact_Phone__c</fullName>
        <description>Phone</description>
        <label>AI Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AI_Contact_Qualification__c</fullName>
        <label>AI Contact Qualification</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>AIContact</label>
    <nameField>
        <label>AIContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIContact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>